<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="idiomas">
        <item>Selecciona idioma</item>
        <item>Español (España)</item>
        <item>Inglés (Reino Unido)</item>
    </string-array>

    <!--Strings de los datos del usuario -->
    <string name="titulo_datos_usuario">Datos del usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="jornadaLaboral">Jornada laboral:</string>
    <string name="correoElectronico">Correo electrónico:</string>
    <string name="empresa">Empresa:</string>
    <string name="rol">Rol:</string>
    <string name="horas">horas</string>

    <!--Strings del menú de fragments -->
    <string name="frag_fichar">Fichar</string>
    <string name="frag_calendario">Calendario</string>
    <string name="frag_dietas">Dietas</string>

    <!--Strings del fichaje -->
    <string name="fichar">Fichar</string>
    <string name="esperar">Debes esperar al menos 5 minutos hasta realizar el siguiente fichaje</string>
    <string name="hora_inicio">00:00:00</string>

    <!--Strings del item de cada fichaje -->
    <string name="fichaje_entrada">Fichaje de entrada</string>
    <string name="fichaje_salida">Fichaje de salida</string>
    <string name="fecha">Fecha: </string>
    <string name="hora">Hora: </string>
    <string name="latitud">Latitud: </string>
    <string name="longitud">Longitud: </string>
    <string name="ubicacion">Ubicación</string>
    <string name="eliminar">Eliminar</string>

    <!--Strings del login -->
    <string name="app_name">UbuExoWorks</string>
    <string name="olvida">¿Has olvidado tus datos de inicio de sesión?</string>
    <string name="ayuda">Obtén ayuda</string>
    <string name="entrada_sistema">Entrada al sistema</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>

    <!--Strings de dialog para borrar el fichaje -->
    <string name="pregunta">¿Estás seguro de que quieres eliminar este fichaje?</string>
    <string name="aceptar">Sí</string>
    <string name="rechazar">No</string>

    <!--Strings para obtener los fichajes con el calendario-->
    <string name="vacio">No hay fichajes</string>

    <!--Strings de las dietas -->
    <string name="dni">DNI: </string>
    <string name="iva">IVA: </string>
    <string name="total">Total: </string>
    <string name="razonSocial">Razón social:</string>
    <string name="tipoTicket">Tipo:</string>
    <string name="descripcion">Descripción:</string>
    <string name="numeroTicket">Número de ticket:</string>
    <string name="reconocer_texto">Reconocer</string>
    <string name="enviar_gasto">Enviar</string>

    <!-- Strings de recuperar contraseña -->
    <string name="introduce_correo">Introduce el correo electrónico \n asociado a tu cuenta.</string>
    <string name="enviar">Enviar</string>

</resources>