<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dietas">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingBottom="30dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:id="@+id/imagen"
            android:layout_margin="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Recognized Text"/>

        <TextView
            android:id="@+id/text_recognition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dni" />
            <EditText
                android:id="@+id/et_dni"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:maxLength="9"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/iva" />

                <EditText
                    android:id="@+id/et_tax"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total" />

            <EditText
                android:id="@+id/et_preciototal"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="7"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reconocerTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/reconocer_texto"
            />

        <Button
            android:id="@+id/btn_enviarGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="Enviar gasto"
            />



    </LinearLayout>




</FrameLayout>