<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimaryBackground">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tipofichaje"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nada"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />
         </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/tv_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nada"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitud"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/tv_latitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nada"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitud"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/tv_longitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nada"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="32dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">
        <ImageView
            android:id="@+id/iw_ubicacion"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/common_google_signin_btn_icon_dark"/>

        <ImageView
            android:id="@+id/iw_eliminarFichaje"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/googleg_disabled_color_18"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>


</LinearLayout>

