<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingTop="10dp"
    >

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_idiomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:minHeight="48dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <!---
            <EditText
                android:id="@+id/correoElectronico"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:ems="10"
                android:background="@drawable/borde_cuenta_pago"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/correo"
                android:textColorHint="@color/colorBordeCuentaPago">
            </EditText>
            -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_correoLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"

                    android:background="@drawable/edit_text_bg"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_falloCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFallo"
                android:layout_marginBottom="15dp"
                android:textSize="12sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_contraseñaLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <EditText
                android:id="@+id/et_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_bg"
                />
        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_falloClave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFallo"
                android:layout_marginBottom="15dp"
                android:textSize="12sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"/>
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_recuperar_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="irArecordarClave">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/olvida"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ayuda"
                android:textColor="@color/design_default_color_primary"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>